--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,10 @@
 }
 
 body{
-    background-color: rgb(206, 255, 206);
+    background-color: rgb(157, 192, 154);
     position:relative;
+    border: solid rgb(201, 238, 245) 5px;
+    padding: 10px;
 }
 
 #foto-igor{
