adição de stilo para foto e habilidades

--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,15 @@ body{
     border: solid rgb(201, 238, 245) 5px;
     padding: 15px;
 }
+#foto-igor{
+    border-radius: 50%;
+    border: solid gray 2px
+}
+
+.hard{
+    font-size: 20px;
+}
+
+.soft {
+    font-size: 16px;
+}
